--- a/markdown/混淆.md
+++ b/markdown/混淆.md
@@ -10,15 +10,11 @@
 
 如果既想保持类名，又想保持里面的内容不被混淆，我们就需要以下方法了
 
-``
--keep class cn.hadcn.test.* {*;}
-``
+``-keep class cn.hadcn.test.* {*;}``
 
 在此基础上，我们也可以使用Java的基本规则来保护特定类不被混淆，比如我们可以用extend，implement等这些Java规则。如下例子就避免所有继承Activity的类被混淆
 
-``
--keep public class * extends android.app.Activity
-``
+``-keep public class * extends android.app.Activity``
 
 如果我们要保留一个类中的内部类不被混淆则需要用$符号
 
