--- a/markdown/个人网站开发.md
+++ b/markdown/个人网站开发.md
@@ -1,4 +1,4 @@
-## Code Hunter 自制网站需求
+## 制网站需求
 
 写着玩玩
 
@@ -8,10 +8,9 @@
 * 第二步 使用javaScript 润色
 
 
-### 后端(待定)
+### 后端
 
-node.js?
-
+node.js + EJS
 
 ### 主页 
 
@@ -23,8 +22,6 @@ node.js?
 ### 子页
 
 #### 一、发布一些自己制作的 Android 小项目
-
-
 
 
 
