--- a/markdown/反编译.md
+++ b/markdown/反编译.md
@@ -1,11 +1,23 @@
-
-# ApkTool
+# 反编译
 
 Tags : ZAZE
 
 ---
 
+[TOC]
+
+---
+
 ### 反编译
+
+
+- 加载框架
+
+```
+版本过旧时会导致打包加载资源等失败
+从平板的/system/framework中获取
+apktool if framework-res.apk
+```
 
 - **decode** : 该命令用于进行反编译apk文件
 
@@ -26,20 +38,30 @@ java -jar smali.jar outDir -o classes.dex
 d2j-dex2jar classes.dex
 ```
 
-
-### 编译修改好的文件
-
-build:该命令用于编译修改好的文件，一般用法为: 
+- 编译修改好的文件
 
 ```
+build:该命令用于编译修改好的文件，一般用法为: 
 apktool b <dir>
 ```
 
-### 加载框架
+- 签名
 
 ```
-apktool if framework-res.apk
+keytool -genkey -v -keystore android.keystore -alias android -keyalg RSA -validity 20000 -keystore /Users/zaze/android_demo.keystore
+
+keytool -list -v -keystore debug.keystore
+
 ```
+
+```
+jarsigner -verbose -digestalg SHA1 -sigalg MD5withRSA -keystore /Users/zaze/Documents/ZAZE/android_zaze.keystore -storepass 3184582 -signedjar your_signed.apk source.apk android
+```
+
+```
+keytool -list -v -keystore android_zaze.keystore
+```
+
 
 - **install-framework**
 ```
@@ -57,12 +79,4 @@ aapt l -a xx.apk > demo.txt
 - **AXMLPrinter2**
 ```
 java -jar AXMLPrinter2.jar AndroidManifest.xml > AndroidManifest.txt
-```
-
-```
-jarsigner -verbose -digestalg SHA1 -sigalg MD5withRSA -keystore /Users/zaze/Documents/ZAZE/android_zaze.keystore -storepass 3184582 -signedjar your_signed.apk SAMSUNG_SRCB_DEMO_Educationtek_v1.0.apk android
-```
-
-```
-keytool -list -v -keystore android_zaze.keystore
 ```
