--- a/markdown/反编译.md
+++ b/markdown/反编译.md
@@ -45,7 +45,7 @@ build:该命令用于编译修改好的文件，一般用法为:
 apktool b <dir>
 ```
 
-- 签名
+- 生成签名
 
 ```
 keytool -genkey -v -keystore android.keystore -alias android -keyalg RSA -validity 20000 -keystore /Users/zaze/android_demo.keystore
@@ -53,6 +53,7 @@ keytool -genkey -v -keystore android.keystore -alias android -keyalg RSA -validi
 keytool -list -v -keystore debug.keystore
 
 ```
+- 对apk进行签名
 
 ```
 jarsigner -verbose -digestalg SHA1 -sigalg MD5withRSA -keystore /Users/zaze/Documents/ZAZE/android_zaze.keystore -storepass 3184582 -signedjar your_signed.apk source.apk android
