--- a/markdown/音视频.md
+++ b/markdown/音视频.md
@@ -94,6 +94,10 @@ PPS : 图像信息
 - 帧内压缩
 - 帧间压缩
 
+### NAL单元和码流结构
+
+![image_1cei5f67b36fg48d341r5omv79.png-140.4kB][1]
+
 
 ### 直播
 
@@ -169,8 +173,4 @@ ffplay rtmp://localhost:1992/live/room
 ```
 
 
-
-
-
-
-
+  [1]: http://static.zybuluo.com/zaze/86uotc8o85mh7fkofs87tixf/image_1cei5f67b36fg48d341r5omv79.png
