--- a/markdown/混淆.md
+++ b/markdown/混淆.md
@@ -1,10 +1,21 @@
 ## 基本规则
 
-一颗星表示只是保持该包下的类名，而子包下的类名还是会被混淆;两颗星表示把本包和所含子包下的类名都保持；用以上方法保持类后，你会发现类名虽然未混淆，但里面的具体方法和变量命名还是变了
+
+### 保持类
+以下方法保持类后，你会发现类名虽然未混淆，但里面的具体方法和变量命名还是变了
+
+
+- 只是保持该包下的类名，而子包下的类名还是会被混淆
+
+```
+-keep class cn.hadcn.test.*
+```
+
+
+- 把本包和所含子包下的类名都保持；
 
 ```
 -keep class cn.hadcn.test.**
--keep class cn.hadcn.test.*
 ```
 
 
@@ -39,3 +50,34 @@
     public <methods>;
 }
 ```
+
+## 一些常用三方库的 混淆配置
+
+
+[Gson][gson-github]
+
+```
+-keepattributes Signature
+# For using GSON @Expose annotation
+-keepattributes *Annotation*
+# Gson specific classes
+-dontwarn sun.misc.**
+#-keep class com.google.gson.stream.** { *; }
+# Application classes that will be serialized/deserialized over Gson
+-keep class com.google.gson.examples.android.model.** { *; }
+
+# Prevent proguard from stripping interface information from TypeAdapterFactory,
+# JsonSerializer, JsonDeserializer instances (so they can be used in @JsonAdapter)
+-keep class * implements com.google.gson.TypeAdapterFactory
+-keep class * implements com.google.gson.JsonSerializer
+-keep class * implements com.google.gson.JsonDeserializer
+```
+
+```
+
+```
+
+
+
+
+[gson-github]:https://github.com/google/gson/
