--- a/markdown/混淆.md
+++ b/markdown/混淆.md
@@ -1,9 +1,17 @@
-## 基本规则
+# 混淆
+
+Tags: zaze
+
+---
+
+[TOC]
+
+---
+
 
 
 ### 保持类
 以下方法保持类后，你会发现类名虽然未混淆，但里面的具体方法和变量命名还是变了
-
 
 - 只是保持该包下的类名，而子包下的类名还是会被混淆
 
@@ -54,7 +62,7 @@
 ## 一些常用三方库的 混淆配置
 
 
-[Gson][gson-github]
+### [Gson][gson-github]
 
 ```
 -keepattributes Signature
@@ -77,6 +85,33 @@
 
 ```
 
+### okhttp
+
+```
+#-------------- okhttp3 start-------------
+# OkHttp3
+# https://github.com/square/okhttp
+# okhttp
+-keepattributes Signature
+-keepattributes *Annotation*
+-keep class com.squareup.okhttp.* { *; }
+-keep interface com.squareup.okhttp.** { *; }
+-dontwarn com.squareup.okhttp.**
+
+# okhttp 3
+-keepattributes Signature
+-keepattributes *Annotation*
+-keep class okhttp3.** { *; }
+-keep interface okhttp3.** { *; }
+-dontwarn okhttp3.**
+
+# Okio
+-dontwarn com.squareup.**
+-dontwarn okio.**
+-keep public class org.codehaus.* { *; }
+-keep public class java.nio.* { *; }
+#----------okhttp end--------------
+```
 
 
 
