--- a/docs/Android/逆向篇/反编译和重编译.md
+++ b/docs/Android/逆向篇/反编译和重编译.md
@@ -61,28 +61,9 @@ apktool b <dir>
 
 ### 2. sign apk
 
-- 生成签名
-
-```bash
-keytool -genkey -v -keystore android.keystore -alias android -keyalg RSA -validity 20000 -keystore /Users/zaze/android_demo.keystore
-```
-
-- 对apk进行签名
-
-```bash
-jarsigner -verbose -digestalg SHA1 -sigalg MD5withRSA -keystore /Users/zaze/android_demo.keystore -storepass 123456 -signedjar your_signed.apk source_unsign.apk android
-```
+[APK手动签名参考文档](../apk/APK手动签名参考.md)
 
 ### 3. 一些可能用到指令
-
-- keytool相关
-
-```bash
-## 查看keystore
-keytool -list -v -keystore debug.keystore
-## 查看CERT.RSA
-keytool -printcert -file CERT.RSA
-```
 
 ```
 java -jar baksmali-2.0.2.jar -o outclasses14  out.dex
