--- a/docs/private/问题处理记录.md
+++ b/docs/private/问题处理记录.md
@@ -1,16 +1,13 @@
-# Gradle 
+# 问题处理记录
 
-Tags : zaze android
 
----
 
-[TOC]
-
----
+## Android相关
 
 ## 1. 依赖模式
 
 ### 1.1 implementation
+
 ```
 - 该依赖方式所依赖的库不会传递(只会在当前module中生效)。
 - 远程库依赖时依然存在依赖传递
@@ -23,6 +20,7 @@ Tags : zaze android
 ```
 
 ### 1.3 compileOnly
+
 ```
 只在编译时有效，不参与打包。
 ```
@@ -35,6 +33,7 @@ Tags : zaze android
 ```
 
 ### 1.4 runtimeOnly
+
 ```
 编译时不参与, 只参与apk打包
 ```
@@ -43,12 +42,14 @@ Tags : zaze android
 ### 编译错误
 
 ---
+
 ```
 A problem occurred configuring project ':app'.
 > Failed to notify project evaluation listener.
    > com.android.build.gradle.tasks.factory.AndroidJavaCompile.setDependencyCacheDir(Ljava/io/File;)V
 
 ```
+
 ```
 - 原因
 gradle-wrapper.properties和gradle 版本不兼容问题
@@ -60,6 +61,7 @@ gradle-wrapper.properties和gradle 版本不兼容问题
 ---
 
 ### 依赖库发生冲突
+
 ```
 android {
 configurations.all {
@@ -71,6 +73,7 @@ configurations.all {
     resolutionStrategy.force "com.android.support:design:$rootProject.supportLibraryVersion"
 }
 ```
+
 ---
 
 ### SNAPSHOT更新问题
@@ -81,7 +84,9 @@ configurations.all {
     resolutionStrategy.cacheDynamicVersionsFor 1, 'seconds'
 }
 ```
+
 ---
+
 ### ClassNotFoundException
 
 ```
@@ -96,4 +101,32 @@ protected void attachBaseContext(Context base) {
     MultiDex.install(this);
 }
 ```
+
+
+
+
+
+##  浏览器相关清理
+
+### 清理站点数据
+
+- 进入**开发者工具**(F12) 
+
+- 选择**应用程序**
+- 点击**存储**
+
+![image-20210910151720488](问题处理备份.assets/image-20210910151720488.png)
+
+### DNS清理
+
+```http
+chrome://net-internals/#dns
+edge://net-internals/#dns
+```
+
+![image-20210910151556761](问题处理备份.assets/image-20210910151556761.png)
+
+
+
+
 
