--- a/docs/private/常用命令备份.md
+++ b/docs/private/常用命令备份.md
@@ -4,6 +4,14 @@
 
 
 
+浏览器打开指定页面
+
+```
+adb shell am start -a android.intent.action.VIEW -d "http://www.bilibili.com"
+```
+
+
+
 ## disk
 
 ```bash
