--- a/docs/android/publish/多渠道打包.md
+++ b/docs/android/publish/多渠道打包.md
@@ -4,17 +4,82 @@
 
 
 
-## 根据配置使用不同的AndroidManifest
+## 定义维度 flavorDimensions
+
+```groovy
+flavorDimensions "default", "color"
+```
+
+## 配置productFlavors
+
+```groovy
+productFlavors {
+    dev {
+        dimension "default"
+        applicationIdSuffix = ".dev"
+//            applicationId = "com.zaze.codelab.flavors.dev"
+        versionNameSuffix = "-dev"
+        buildConfigField("String", "flavor", "\"dev\"")
+    }
+
+    pub {
+        dimension "default"
+        applicationIdSuffix = ".pub"
+        versionNameSuffix = "-pub"
+        buildConfigField("String", "flavor", "\"pub\"")
+    }
+
+    black {
+        dimension "color"
+        applicationIdSuffix = ".black"
+        versionNameSuffix = "-black"
+        buildConfigField("String", "color", "\"black\"")
+    }
+
+    white {
+        dimension "color"
+        applicationIdSuffix = ".white"
+        versionNameSuffix = "-white"
+        buildConfigField("String", "color", "\"white\"")
+    }
+}
+```
+
+
+
+## 配置sourceSets加载不同的资源
+
+由于``default``在``color``之前, 所以此处覆盖原则为 dev > black > main, 即若都存在则以dev为准。
+
+若打开``devBlack``则以devBlack为准, 优先级 devBlack > dev > black > main
 
 ```groovy
 sourceSets {
-  main {
-    if (singleMode.toBoolean()) {
-      manifest.srcFile 'src/main/release/AndroidManifest.xml'
-    } else {
-      manifest.srcFile 'src/main/debug/AndroidManifest.xml'
+    main {
+        java.srcDirs = [
+                'src/main/java',
+                'src/main/java-gen',
+                'gen'
+        ]
+        println("java.srcDirs " + java.srcDirs)
+        res.srcDirs = ['src/main/res']
+        assets.srcDirs = ['src/main/assets']
     }
-  }
+
+    dev {
+        jniLibs.srcDirs = ['src/dev/jniLibs']
+        java.srcDirs = ['src/dev/java']
+        res.srcDirs = ['src/dev/res']
+        assets.srcDirs = ['src/dev/assets']
+    }
+
+//        devBlack {
+//            println("sourceSets: devBlack")
+//            res.srcDirs = ['src/devBlack/res']
+//        }
+    black {
+        res.srcDirs = ['src/black/res']
+    }
 }
 ```
 
