--- a/docs/private/问题处理记录.md
+++ b/docs/private/问题处理记录.md
@@ -4,22 +4,22 @@
 
 ## Android相关
 
-## 1. 依赖模式
+### 依赖模式
 
-### 1.1 implementation
+#### 1. implementation
 
 ```
 - 该依赖方式所依赖的库不会传递(只会在当前module中生效)。
 - 远程库依赖时依然存在依赖传递
 ```
 
-### 1.2 api
+#### 2. api
 
 ```
 该依赖方式会传递所依赖的库。
 ```
 
-### 1.3 compileOnly
+#### 3. compileOnly
 
 ```
 只在编译时有效，不参与打包。
@@ -32,7 +32,7 @@
 - 动态加载jar?
 ```
 
-### 1.4 runtimeOnly
+#### 4. runtimeOnly
 
 ```
 编译时不参与, 只参与apk打包
@@ -102,6 +102,25 @@ protected void attachBaseContext(Context base) {
 }
 ```
 
+### Maven仓库无法更新错误
+
+错误信息:``Using insecure protocols with repositories, without explicit opt-in,``
+
+处理方式：
+
+1. 若支持https，将地址改为https即可。
+
+2. 设置``allowInsecureProtocol = true``
+
+```groovy
+maven {
+  allowInsecureProtocol = true
+  url 'http://localhost:8081/repository/maven-public'
+}
+```
+
+---
+
 
 
 
@@ -128,5 +147,11 @@ edge://net-internals/#dns
 
 
 
+## markdown
 
+### 强制换页
+
+```
+<div STYLE="page-break-after: always;"></div>
+```
 
