--- a/docs/private/问题处理记录.md
+++ b/docs/private/问题处理记录.md
@@ -155,3 +155,25 @@ edge://net-internals/#dns
 <div STYLE="page-break-after: always;"></div>
 ```
 
+
+## cmd相关
+
+### npm
+修改仓库地址
+```shell
+npm config set registry "https://registry.npm.taobao.org"
+```
+
+### 在此系统上禁止运行脚本
+```
+PS C:\WINDOWS\system32> docsify
+docsify : 无法加载文件 C:\Users\zaze\AppData\Roaming\npm\docsify.ps1，因为在此系统上禁止运行脚本
+```
+以管理员权限打开PowerShell，修改执行策略
+```shell
+## 1
+set-ExecutionPolicy RemoteSigned
+## 2 根据提示
+A
+```
+
