--- a/docs/private/问题处理记录.md
+++ b/docs/private/问题处理记录.md
@@ -1,6 +1,8 @@
 # 问题处理记录
 
+## MacBook
 
+[如何重置 Mac 的 SMC - Apple 支持 (中国)](https://support.apple.com/zh-cn/HT201295)
 
 ## Android相关
 
@@ -38,12 +40,11 @@
 编译时不参与, 只参与apk打包
 ```
 
-
-### 编译错误
+### Gradle编译错误
 
 ---
 
-```
+```groovy
 A problem occurred configuring project ':app'.
 > Failed to notify project evaluation listener.
    > com.android.build.gradle.tasks.factory.AndroidJavaCompile.setDependencyCacheDir(Ljava/io/File;)V
@@ -56,6 +57,21 @@ gradle-wrapper.properties和gradle 版本不兼容问题
 - 处理方式
 更新配置到最新
 使用项目本身的 gradlew 编译
+```
+
+报错资源无法找到
+
+```
+AAPT: error: resource drawable/default_background (aka com.xxxx:drawable/xxxx.xml
+```
+
+检查对应的xml文件是否正确, 例如下面 ``<?xml>``标签重复出现了2次
+
+```xml
+<?xml version="1.0" encoding="utf-8"?><?xml version="1.0" encoding="utf-8"?>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    .....
+</layer-list>
 ```
 
 ---
@@ -109,8 +125,7 @@ protected void attachBaseContext(Context base) {
 处理方式：
 
 1. 若支持https，将地址改为https即可。
-
-2. 设置``allowInsecureProtocol = true``
+2. 设置 ``allowInsecureProtocol = true``
 
 ```groovy
 maven {
@@ -119,18 +134,27 @@ maven {
 }
 ```
 
+### .9问题
+
+```
+..... file failed to compile ...
+```
+
+```
+# build.gradle  defaultConfig 下添加
+aaptOptions.cruncherEnabled=false
+aaptOptions.useNewCruncher=false
+```
+
+> 还是自己根据原图编辑.9比较靠谱
+
 ---
 
-
-
-
-
-##  浏览器相关清理
+## 浏览器相关清理
 
 ### 清理站点数据
 
-- 进入**开发者工具**(F12) 
-
+- 进入**开发者工具**(F12)
 - 选择**应用程序**
 - 点击**存储**
 
@@ -145,8 +169,6 @@ edge://net-internals/#dns
 
 ![image-20210910151556761](问题处理备份.assets/image-20210910151556761.png)
 
-
-
 ## markdown
 
 ### 强制换页
@@ -155,25 +177,28 @@ edge://net-internals/#dns
 <div STYLE="page-break-after: always;"></div>
 ```
 
-
 ## cmd相关
 
 ### npm
+
 修改仓库地址
+
 ```shell
 npm config set registry "https://registry.npm.taobao.org"
 ```
 
 ### 在此系统上禁止运行脚本
+
 ```
 PS C:\WINDOWS\system32> docsify
 docsify : 无法加载文件 C:\Users\zaze\AppData\Roaming\npm\docsify.ps1，因为在此系统上禁止运行脚本
 ```
+
 以管理员权限打开PowerShell，修改执行策略
+
 ```shell
 ## 1
 set-ExecutionPolicy RemoteSigned
 ## 2 根据提示
 A
 ```
-
