--- a/docs/android/publish/多渠道打包.md
+++ b/docs/android/publish/多渠道打包.md
@@ -1,8 +1,17 @@
 # 多渠道打包
 
+> [Google官方文档](https://developer.android.com/studio/build/build-variants#product-flavors)
+>
 > [Android : 代码多维度管理(产品风味) - flavorDimensions & productFlavors (shuzhiduo.com)](https://www.shuzhiduo.com/A/nAJvvg03Jr/)
 
 
+|清单文件|优先级|说明|
+|--|--|--|
+|构建变体清单|高|src/demoDebug/|
+|构建类型清单|中|src/debug/|
+|产品变种清单|低|src/demo/|
+
+构建类型: ``debug``、``release``
 
 ## 定义维度 flavorDimensions
 
@@ -45,13 +54,14 @@ productFlavors {
 }
 ```
 
-
-
 ## 配置sourceSets加载不同的资源
 
-由于``default``在``color``之前, 所以此处覆盖原则为 dev > black > main, 即若都存在则以dev为准。
+> [清单合并规则](https://developer.android.com/studio/build/manage-manifests#merge-manifests)
 
-若打开``devBlack``则以devBlack为准, 优先级 devBlack > dev > black > main
+针对变种维度，清单优先级与每个维度在 flavorDimensions 属性中的列示顺序（按优先级由高到低的顺序）对应。此规则同样应用于资源规则
+例如已 ``devBlackDebug`` 进行编译，由于``default``在``color``之前, 所以此处覆盖原则为 dev > black > main, 即若都存在则以dev为准。
+
+若存在``devBlack``则以devBlack为准, 优先级 devBlack > dev > black > main
 
 ```groovy
 sourceSets {
