--- a/docs/private/常用命令备份.md
+++ b/docs/private/常用命令备份.md
@@ -3,13 +3,34 @@
 # CMD常用命令
 
 
+```
+# 系统对每个进程的线程数限制, 需要root权限
+cat /proc/sys/kernel/threads-max
+
+# 查看指定进程当前运行的线程数
+cat /proc/{pid}/status
+
+# 支持最大文件打开数
+ulimit -n
+
+# 查看进程打开的文件描述符 fd
+cd /proc/{pid}/fd
+ls
+
+# gradle
+./gradlew clean build --info >> ~/Downloads/build.txt 2>&1
+
+./gradlew app:assembleDebug --console=plain
+
+./gradlew -p app dependencies >> /Users/zhaozhen/Downloads/dependencies.txt
+```
+
 
 浏览器打开指定页面
 
 ```
 adb shell am start -a android.intent.action.VIEW -d "http://www.bilibili.com"
 ```
-
 
 
 ## disk
