--- a/docs/private/问题处理记录.md
+++ b/docs/private/问题处理记录.md
@@ -202,3 +202,13 @@ set-ExecutionPolicy RemoteSigned
 ## 2 根据提示
 A
 ```
+
+### homebrew
+
+```
+Error: Another active Homebrew update process is already in progress.
+```
+处理方式:
+```
+rm -rf /usr/local/var/homebrew/locks
+```
