--- a/docs/android/性能/性能优化.md
+++ b/docs/android/性能/性能优化.md
@@ -2,12 +2,57 @@
 
 ## I/O
 
-> 磁盘I/O性能指标
->
-> ``吞吐量``：连续读写速率。
-> ``IOPS``：每秒读写的次数。
+汇总命令操作：
 
-### 1. I/O测量方式
+```shell
+
+# 观测I/O负载
+proc/self/schedstat
+# 统计真正的磁盘读写次数
+/proc/sys/vm/block_dump
+/proc/diskstats
+
+# 清除Buffer和Cache内存缓存
+echo 3 > /proc/sys/vm/drop_caches
+# root 下 开启I/O监控，将所有block读写dump到日志文件中
+echo 1 > /proc/sys/vm/block_dump
+# 根据pid查询dump信息
+dmesg -c grep pid
+
+# 跟踪I/O的系统调用次数和耗时
+strace -ttT -f -p [pid]
+# 统计一段时间内所有系统调用的耗时概况。
+strace -c -f -p [pid]
+```
+
+
+
+### 1. 磁盘I/O性能指标
+
+``吞吐量``：连续读写速率。
+``IOPS``：每秒读写的次数。
+
+#### 1.1  I/O问题场景
+
+- 写入放大现象
+
+  ```
+    闪存的擦除是以block块为基本单元的。闪存的写入是以page为单位。（注意区分：文件系统是以block为单位读写）
+    当一个块中的已经没有干净的空间，但是存在失效数据可以擦除时，会先将块中的数据读到缓存中。然后将块数据擦除，在缓存中修改更新数据，最后再把新数据写回去。此时写入的数据将大于实际需要更新的数据。
+    当设备磁盘碎片多、剩余空间少时将很容易出现写入放大现象。
+  ```
+
+- 内存不足
+
+  ```
+  当设备内存不足时，系统会回收Page Chache和Buffer Cache的内存，导致大部分的写操作直接操作磁盘,从而影响性能。
+  ```
+
+  
+
+### 2. I/O监控方式方式
+
+#### 2.1 本地观测
 
 - proc
 
@@ -54,21 +99,109 @@
  - vmstat
 
    ```
-   //清除Buffer和Cache内存缓存
+   // 清除Buffer和Cache内存缓存
    echo 3 > /proc/sys/vm/drop_caches
-   //每隔1秒输出1组vmstat数据
+   // 每隔1秒输出1组vmstat数据
    vmstat 1
-   
-   
-   //测试写入速度，写入文件/data/data/test，buffer大小为4K，次数为1000次
+   // 测试写入速度，写入文件/data/data/test，buffer大小为4K，次数为1000次
    dd if=/dev/zero of=/data/data/test bs=4k count=1000
    ```
 
+#### 2.2 如何实现I/O监控
+
+**选择Hook方式：**
+
+- Java Hook
+
+  ```
+  性能极差：由于使用了动态代理的方式和java的字符串操作。
+  兼容性差：需要根据Android版本做相应的兼容，且Android P后开始对非公开API增加了访问限制。
+  无法监控Native代码
+  ```
+
+- Native Hook
+
+  ```
+  PLT Hook : Facebook的Profilo使用。
+  GOT Hook
+  ```
+
+  ```
+  # 选定Hook的目标函数
+  int open(const char *pathname, int flags, mode_t mode);
+  ssize_t read(int fd, void *buf, size_t size);
+  ssize_t write(int fd, const void *buf, size_t size); write_cuk
+  int close(int fd);
+  # Android 7.0后新增
+  open64
+  __read_chk
+  __write_chk
+  ```
+
+**确认采集内容：**
+
+| hook函数        | 监控内容                                           |
+| --------------- | -------------------------------------------------- |
+| open            | 文件名、文件大小、打开文件的堆栈、线程、fd         |
+| read<br />write | 使用的Buffer大小、读写次数、读写总大小、读写总耗时 |
+| close           | 打开文件总耗时、最大的连续读写时间                 |
+
+ **拟定一些I/O的不良情况：**
+
+- 主线程I/O
+
+  ```
+  限定：连续读写超过一定时间(100ms)
+  ```
+
+- 读写Buffer过小
+
+  ```
+  过小的buffer将导致多次无用的系统调用和内存拷贝。
+  ```
+
+  ```
+  可以使用 new StatFs("/data").getBlockSize()获取block size。
+  ```
+
+  ```
+  限定：
+  buffer size 小于 block size，一般为4KB
+  read/write的次数超过一定的阈值(例如 5)
+  ```
+
+- 重复读
+
+  ```
+  重复读取一定次数，且内容相同。
+  读取期间文件内容没有更新。
+  
+  处理方式：增加内存缓存，适用于配置文件、设备参数等之类场景。
+  ```
+
+- 资源泄漏
+
+  ```
+  打开文件、Cursor等没有及时关闭
+  ```
+
+  
+
+#### 2.3 线上监控方案
+
+> 微信Matrix
+>
+> [Tencent/matrix: Matrix is a plugin style, non-invasive APM system developed by WeChat. (github.com)](https://github.com/Tencent/matrix)
 
 
-## 2. mmap
 
-将文件映射到进程的地址空间。
+### 3. I/O优化
+
+#### 对大文件使用mmap或NIO
+
+> MappedByteBuffer: Java NIO 中的mmap封装。
+
+mmap将文件映射到进程的地址空间。
 
 - 减少系统调用。
 
@@ -92,3 +225,17 @@
 - 会使虚拟内存增大，从而导致OOM。
 
 - 磁盘延迟，mmap通过缺页中断向磁盘发起真正的磁盘I/O。
+
+#### 安装包不压缩
+
+对启动过程需要使用的文件可以指定不压缩，比如library、resource、resource.arsc等。
+
+#### Buffer复用
+
+利用okio等开源库，减少cpu和内存的消耗。
+
+#### 存储结构和算法优化
+
+配置文件改为读取时才解析对应项。
+
+XML、JSON等数据结构的优化
