--- a/docs/private/问题处理记录.md
+++ b/docs/private/问题处理记录.md
@@ -4,6 +4,18 @@
 
 [如何重置 Mac 的 SMC - Apple 支持 (中国)](https://support.apple.com/zh-cn/HT201295)
 
+
+
+## python3软连接方式处理python无法运行的问题
+
+```shell
+sudo ln -s /usr/local/bin/python3 python
+```
+
+
+
+
+
 ## Android相关
 
 ### 依赖模式
