--- a/docs/private/算法导论笔记.md
+++ b/docs/private/算法导论笔记.md
@@ -31,14 +31,105 @@
 链表的类型：
 
 - 单向链表：一个节点指向下一个节点。
+
 - 双向链表：一个节点有2个指针域。
     ```
-
+    
     ```
+    
 - 循环链表：链表的最后一个节点指向第一个节点。
     ```
     能通过任意一个节点找到所有的节点。
     ```
+
+
+
+### 2. 树
+
+#### 二叉搜索树
+
+特点
+
+- 左子树上的所有节点的值均<=父节点的值。
+- 右子树上的所有节点的值均>=父节点的值。
+- 左右子树也为满足上述条件的二叉搜索树。
+
+
+
+> 时间复杂度
+
+| 操作 | 最优 | 一般 | 最坏 |
+| ---- | ---- | ---- | ---- |
+| 查找 |      |      | O(N) |
+| 插入 |      |      | O(N) |
+| 删除 |      |      | O(N) |
+
+
+
+最坏场景：O(N)
+
+>  插入 9、10、11
+
+![image-20220530143106188](算法导论笔记.assets/image-20220530143106188-3892268.png)
+
+##### 旋转操作
+
+- 左旋
+- 右旋
+
+
+
+#### 平衡树
+
+> 时间复杂度
+
+| 操作 | 最优 | 一般    | 最坏 |
+| ---- | ---- | ------- | ---- |
+| 查找 |      | O(logN) |      |
+| 插入 |      | O(logN) |      |
+| 删除 |      | O(logN) |      |
+
+
+
+#### 234树/4阶B树
+
+- 是一种多叉树
+- 每个节点最多有``3个数据项``和``4个字节点``。
+
+![image-20220530143729600](算法导论笔记.assets/image-20220530143729600-3892651.png) 插入操作：``上溢``。
+
+删除操作：``下溢``。
+
+
+
+#### 红黑树
+
+> 一种高效的自平衡二叉搜索树
+
+- 节点是红色或黑色。
+- 根节点是黑色。
+- 叶子节点都为黑色，且都为空。
+- 红色节点的父节点和字节点都为黑色(不会存在2个连续的红色节点)。
+- 从任一节点到叶子节点到所有路径都包含相同的数量的黑色节点。
+
+> 红黑树和234树是等价
+
+- 红黑树的黑色节点个树 = 234树的节点数
+- 234树的每一个节点中：黑色节点必为父节点，红色节点为字节点（黑色终结，红色两边）。
+
+
+
+##### 插入操作的12种情况
+
+> 如果插入的是根节点，则为黑色。
+>
+> 其余情况插入的节点``最开始都一定是红色``（出现连续两个红色节点的冲突情况时需要进行旋转和变化）。
+
+- 插入节点的父节点为黑色（4种）：直接插入，不做调整。
+- 叔父节点不是红色（4种）：变色 + 旋转。
+- 叔父节点时红色（4种上溢）：变色。
+
+
 
 
 ## 伪代码
@@ -87,7 +178,7 @@
     ```
 - 关键词``error``表示因为已被调用的过程情况不对而出现了一个错误。
 
- 
+
 ## 分析算法
 
 ### RAM模型
