--- a/docs/private/常用操作记录.md
+++ b/docs/private/常用操作记录.md
@@ -31,6 +31,13 @@ npm run dev
 adb shell am start -a android.intent.action.VIEW -d "http://www.bilibili.com"
 ```
 
+## cocoapods
+
+```
+pod repo list
+```
+
+
 ## disk
 
 ```bash
@@ -203,6 +210,19 @@ repositories {
   google()
   mavenCentral()
 }
+```
+
+### 常用正则匹配
+
+> ip
+```txt
+(http[s]?://)?([\d]{1,3}\.[\d]{1,3}\.[\d]{1,3}\.[\d]{1,3})(:\d+)?((?=(/)).*)?
+```
+
+> http url
+
+```txt
+(http[s]?://)?([a-z0-9A-Z\\-_.*]+)(:\\d+)?((?=(/)).*)?
 ```
 
 ### 日志
