--- a/docs/projects/阅读器项目.md
+++ b/docs/projects/阅读器项目.md
@@ -44,7 +44,8 @@
 *   [ ] 字体样式编辑
 *   [ ] 阅读背景（夜间模式）
 *   [ ] 在线书源导入（）
-*   [ ] 在线书源搜索（）
+*   [x] 支持书源搜索
+*   [x] 书籍详情页展示
 *   [ ] 阅读历史
 *   [ ] epub支持
 *   [ ] pdf支持
@@ -111,9 +112,58 @@
 - 爬取网页内容
 - dom解析
 - 网页内容特征提取
-- 规则
 
+### 书源规则
 
+> 规则参考了开源阅读的书源规则。
+
+#### 规则分隔符`@`
+
+```dart
+a@[[0]]@$text
+```
+
+#### 标签选择规则
+
+默认使用`css selector`规则。
+
+标签位置以`[[]]`包裹, 排除使用`[[!]]`。
+
+从`0`开始, `-1`表示倒数第一个，位置依次类推, 以`:`分割。
+
+连续区间使用 `..`连接。
+
+```dart
+// 选择index为0和2的a标签
+a@[[0:2]]
+// 排除index为0和2
+a@[[!0:2]]
+// 从index=0 开始到末尾
+a@[[0 .. -1]]
+```
+
+#### 属性选择
+
+以`$`开头表示获取属性
+
+```dart
+// 获取a标签包裹的内容
+a@[[0]]@$text
+// 获取href内容
+$href
+```
+
+#### 正则相关规则
+
+格式：`###正则表达式##替换内容###`
+
+group获取：`$`表示正则匹配到的group。
+
+```dart
+// $1 = group[1]
+// $2 = group[2]
+a@[[0]]@$href@###.+\D((\d+)\d{3})\D##https://www.xbiquwx.la/files/article/image/$2/$1/$1s.jpg###
+```
 
 
 
