--- a/docs/private/常用操作记录.md
+++ b/docs/private/常用操作记录.md
@@ -31,6 +31,20 @@ npm run dev
 adb shell am start -a android.intent.action.VIEW -d "http://www.bilibili.com"
 ```
 
+## windows choco 
+
+[Chocolatey Software | Installing Chocolatey](https://chocolatey.org/install)
+
+> 已管理员身份打开 `powershell`
+
+```shell
+Set-ExecutionPolicy Bypass -Scope Process -Force; [System.Net.ServicePointManager]::SecurityProtocol = [System.Net.ServicePointManager]::SecurityProtocol -bor 3072; iex ((New-Object System.Net.WebClient).DownloadString('https://community.chocolatey.org/install.ps1'))
+```
+
+
+
+
+
 ## cocoapods
 
 ```
@@ -173,18 +187,18 @@ timeDilation = 50.0;
 <!---->
 
     adb -s <serial number>
-
+    
     logcat | grep ActivityManager
-
+    
     ps |grep -E 'com.zaze.demo|com.zaze.test'
-
+    
     # 列出所有的包名
     adb shell pm list packages
-
+    
     # 列出所有的安装应用的信息
     adb shell dumpsys package：
     adb shell dumpsys activity activities
-
+    
     adb shell am set-debug-app -w com.xxxx
     adb shell am set-debug-app -w -persitent xxxx
     adb shell am clear-debug-app
