--- a/docs/android/性能/电量优化.md
+++ b/docs/android/性能/电量优化.md
@@ -1,4 +1,6 @@
-# 低电耗模式(Doze)和应用待机模式(App Standby)
+# 电量优化
+
+> 低电耗模式(Doze)和应用待机模式(App Standby)
 
 
 [Android M doze特性预研](https://cloud.tencent.com/developer/article/1030692)
@@ -214,15 +216,31 @@ if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.M) {
 }
 ```
 
-### WorkManager处理后台任务
+[Android任务调度](../Android任务调度.md)
 
-[Schedule tasks with WorkManager | Android Developers](https://developer.android.com/topic/libraries/architecture/workmanager)
+## 导出系统耗电情况
 
-### AlarmManager
-
-[](https://developer.android.com/training/scheduling/alarms)
-
-```kotlin
-当设备在低电耗模式下处于空闲状态时，不会触发闹钟。所有已设置的闹钟都会推迟，直到设备退出低电耗模式。
-Doze模式下可以使用 **setAndAllowWhileIdle()** 或 **setExactAndAllowWhileIdle()**
+```shell
+# 粗略的电量估算
+adb shell dumpsys batterystats > battery.txt
+# 
+//7.0和7.0以后
+adb bugreport bugreport.zip
+//6.0和6.0之前
+adb bugreport > bugreport.txt
+# 通过historian图形化展示结果
+python historian.py -a bugreport.txt > battery.html
 ```
+
+### 优化方向
+
+优化应用的后台耗电
+
+* 后台Wifi扫描过多
+* 后台网络使用过多
+* Alarm 唤醒过多
+* 频繁使用Wakelock，阻止系统休眠
+
+* Bluetooth
+* Sensor
+* GPS
