--- a/docs/base/数据结构与算法.md
+++ b/docs/base/数据结构与算法.md
@@ -1,4 +1,4 @@
-# 算法导论笔记
+# 数据结构与算法
 
 ## 复杂度分析
 
@@ -77,7 +77,7 @@
 
 >  插入 9、10、11
 
-![image-20220530143106188](算法导论笔记.assets/image-20220530143106188-3892268.png)
+![image-20220530143106188](数据结构与算法.assets/image-20220530143106188-3892268.png)
 
 ##### 旋转操作
 
@@ -103,7 +103,7 @@
 - 是一种多叉树
 - 每个节点最多有``3个数据项``和``4个字节点``。
 
-![image-20220530143729600](算法导论笔记.assets/image-20220530143729600-3892651.png) 插入操作：``上溢``。
+![image-20220530143729600](数据结构与算法.assets/image-20220530143729600-3892651.png) 插入操作：``上溢``。
 
 删除操作：``下溢``。
 
@@ -206,10 +206,20 @@
     条件与无条件转移、子程序调用与返回
     ```
 
-
 ## 算法基础
 
 ### 1. 排序
+
+| 排序算法 | 时间复杂度                  | 稳定排序？ | 原地排序？ |
+| -------- | --------------------------- | ---------- | ---------- |
+| 冒泡排序 | O(n^2)                      | Y          | Y          |
+| 插入排序 | O(n^2)                      | Y          | Y          |
+| 选择排序 | O(n^2)                      | N          | Y          |
+| 快速排序 | O(n logn), 最坏退化为O(n^2) | N          | Y          |
+| 归并排序 | O(n logn)                   | Y          | N          |
+| 计数排序 | O(n + k)，k是数据范围       | Y          | N          |
+| 桶排序   | O(n)                        | Y          | N          |
+| 基数排序 | O(d n), d是维度             | Y          | N          |
 
 #### 1.1 插入排序
 
@@ -218,3 +228,20 @@
 - 初始化：循环的第一次迭代之前，它为真。
 - 保持：如果循环的某次迭代之前它为真，那么下次迭代之前它仍为真。
 - 终止：在循环终止时，不变式为我们提供一个有用的性质，该性质有助于证明算法时正确的。
+
+### 1.2 快速排序
+
+> 分区选择优化
+
+* 三数取中法；
+
+  首、尾、中间，分别取出一个数，然后对比大小，取这 3 个数的中间值作为分区点。数组比较大时，取数需要更多，5数、10数等。
+
+* 随机法；
+
+  随机选择一个元素作为分区点，每次都选中最差分区的情况不太可能出现。
+
+> 递归优化
+
+* 限制递归层级；
+* 手动模拟函数调用栈，越过系统栈大小的限制；
