--- a/docs/network/网络基础笔记.md
+++ b/docs/network/网络基础笔记.md
@@ -5,24 +5,68 @@ date: 2020-06-01 11:20
 
 # 网络基础学习梳理
 
+## 网络分层
+
+### 标准7层OSI模式
+
+- 7 : 应用层 http
+
+- 6 : 表示层
+
+- 5 : 会话层
+
+- 4 : 传输层 tcp
+
+- 3 : 网络层  ip
+
+- 2 : 链路层
+
+- 1 : 物理层
+
+### ARPANER参考模型
+
+- 7：应用层
+
+- 4：传输层
+
+- 3.5：网络层（辅助）
+
+- 3：网络层
+
+- 2.5：链路层（辅助）
+
+
+
 ## 网络分类
 ![](./_image/2020-06-01/2020-06-01-11-21-46.png)
-- [x] ABC类地址包含的主机范围
+
+ABC类地址包含的主机范围
 ![](./_image/2020-06-01/2020-06-01-11-22-08.png)
+
 - 无类型域间选路（CIDR）
 
 
-## Linux
-![](./_image/2020-06-01/2020-06-01-11-22-38.png)
 
-```bash
-ps |grep Nemu
-lsof -i
-lsof -p 
-```
+## 性能测量
+
+### 吞吐量
+
+网络接口接收和传输的每秒字节数。
+
+### 延迟
+
+系统调用发送/接收延时、连接延时、首包延时、网络往返时间等。
+
+### 连接数
+
+每秒的连接数。
+
+### 错误
+
+丢包计数、超时等。
 
 
 
-  [1]: http://static.zybuluo.com/zaze/gyn2vocxnfq0m491jab0a54l/image_1dqha3oo41knu17vtr9gdl4s41p.png
-  [2]: http://static.zybuluo.com/zaze/z94o3qmas8e5wl3zc5xw07w1/image_1dqha7u5e1vu314fsboj152j1g8a1j.png
-  [3]: http://static.zybuluo.com/zaze/g84nv70c8xhbqmmze7trjjfl/image_1dqha6q581505g0sn611ckhueh16.png
+[1]: http://static.zybuluo.com/zaze/gyn2vocxnfq0m491jab0a54l/image_1dqha3oo41knu17vtr9gdl4s41p.png
+[2]: http://static.zybuluo.com/zaze/z94o3qmas8e5wl3zc5xw07w1/image_1dqha7u5e1vu314fsboj152j1g8a1j.png
+[3]: http://static.zybuluo.com/zaze/g84nv70c8xhbqmmze7trjjfl/image_1dqha6q581505g0sn611ckhueh16.png
