--- a/docs/projects/阅读器项目.md
+++ b/docs/projects/阅读器项目.md
@@ -166,6 +166,11 @@ flutter pub run build_runner build
 #### 规则分隔符`@`
 
 ```dart
+/// 获取【第一个】【a标签】的【内容】
+/// 此处有3个规则    
+/// a: 匹配a标签
+/// [[0]]: a标签的位置为index = 0。
+/// $text: 获取text内容
 a@[[0]]@$text
 ```
 
