--- a/docs/private/临时笔记.md
+++ b/docs/private/临时笔记.md
@@ -51,3 +51,19 @@ F = dp/dt
 ### 第三定律（作用力于反作用力）
 
 > 两个物体之间的作用力和反作用力，总是同时在同一条直线上，大小相等，方向相反。
+
+
+
+## 缓存问题
+
+缓存穿透：没有使用缓存，直接请求数据库。
+
+缓存击穿：大量请求访问同一个点，导致缓存服务器被压垮。
+
+
+
+
+
+## 卡特兰数(Catalan number)
+
+> 又称**卡塔兰数**、**明安图数**
