--- a/docs/base/数据结构与算法.md
+++ b/docs/base/数据结构与算法.md
@@ -1,96 +1,16 @@
 # 数据结构与算法
 
-## 伪代码
+## 1 数据结构
 
-- 缩进表示块结构。
-
-- while、for与repeat-until等循环结构以及if-else等条件语句机构与C、C++、Java、Python和Pascal中的那些机构具有类似的解释。
-
-  ```
-  to：迭代递增
-  downto：迭代递减
-  by：指定增量， by 2
-  ```
-
-- 符号``//``表示该行后面部分为注释。
-
-- 形如i=j=e的多重赋值将表达式e的值赋给变量i和j。
-
-  ```
-  j = e;
-  i = j;
-  ```
-
-- 变量是局部给定过程的。若无显示说明，不使用全局变量。
-
-- 数组元素通过``数组名[下标]``的形式来访问。
-
-  ```
-  A[i] 表示 数组A的第i个元素。
-  .. 表示数组值的一个范围,
-  A[1..j] 表示A的一个子数组。
-  ```
-
-- 复合数据通常被组织称``对象``,对象又由``属性``组成。
-
-  ```
-  . 后跟一个 属性名。例如：A.length
-  我们把表示一个数组或对象的变量看作指向表示数组或对象的数据的一个指针。
-  ```
-
-- ``按值``把参数传递给过程：被调用过程接收其参数自身的副本。
-
-  ```
-  如果对某个参数赋值，调用过程看不到这种改变。即参数重新赋值对原始参数并没有影响。
-  当对象被传递时，指向表示对象数据的指针被复制，而对象的属性并未被复制。即改变对象的属性时，原始对象内的属性也将会被改变。
-  数组同对象。
-  ```
-
-- 一个reutrn语句立即将控制返回到调用过程的调用点。
-
-- 布尔运算符``and``和``or``都是**短路的**。
-
-  ```
-  即 x and y，若 x 为 false，则不再求值y。
-  x or y，若 x 为 true， 则不再求值y。
-  ```
-
-- 关键词``error``表示因为已被调用的过程情况不对而出现了一个错误。
-
-
-## 分析算法
-
-### RAM模型
-
-假定为单处理器，指令一条接一条地执行，没有并发操作。
-
-- 算术指令
-
-  ```
-  加法、减法、乘法、除法、其余、向下取整、向上取整
-  ```
-
-- 数据移动指令
-
-  ```
-  装入、存储、复制
-  ```
-
-- 控制指令
-
-  ```
-  条件与无条件转移、子程序调用与返回
-  ```
-
----
-
-## 数据结构
-
-### 1、 线性表
+### 1.1 线性表
 
 #### 数组和矩阵
 
 > 连续空间
+
+| 随机访问 | 插入删除 |
+| -------- | -------- |
+| O(1)     | O(n)     |
 
 优点
 
@@ -99,15 +19,15 @@
 缺点
 
 - 需要事先设置数组的长度。
-- 需要连续的大块内存，且大小固定。
-- 插入/删除节点慢。
-
+- 需要连续的存储空间，且大小固定。
+- 插入/删除结点慢。
 
 #### 链表
 
-优点
+通过指针链接次序。
 
 - 插入删除速度快。
+- 非连续、非顺序的存储结构
 - 空间没有限制，也不必事先知道大小。
 
 缺点
@@ -115,11 +35,19 @@
 
 > 链表的类型：
 
-| 类型     |                                    |                                    |
-| -------- | ---------------------------------- | ---------------------------------- |
-| 单向链表 | 一个节点指向下一个节点。           |                                    |
-| 双向链表 | 一个节点有2个指针域。              |                                    |
-| 循环链表 | 链表的最后一个节点指向第一个节点。 | 能通过任意一个节点找到所有的节点。 |
+| 类型     |                                              |                                                              |
+| -------- | -------------------------------------------- | ------------------------------------------------------------ |
+| 单向链表 | 数据域 + 一个指针域。                        | 一个存储数据元素的数据域 和 一个存储下一个结点地址的指针域（**后继指针**）组成。 |
+| 双向链表 | 数据域 + 两个指针域。                        | 在单链表的结果上，增加了一个存储上一个结点地址的指针域（**前驱指针**）。Java的`LinkedHashMap` |
+| 循环链表 | 单链表 or 双向链表，**尾结点指针指向头结点** | 能通过任意一个节点找到所有的结点。                           |
+
+#### 静态链表
+
+> 用数组表述链表。
+
+数组的每个元素都有**2个数据域**构成，一个存储**数据元素（data）**，一个存储**游标（cur）**,相当于单链表中的next指针。
+
+
 
 #### 跳表（Skip list）
 
@@ -131,6 +59,7 @@
 
 * 链表加多级索引，减少查询次数。
 * 支持快速插入、删除、查找操作，时间复杂度为O(logn)。
+* 空间复杂度：O(n)，适用于不太在意内存空间的场景。
 
 **结构图：**
 
@@ -150,9 +79,10 @@
 
 > 基于数组支持按照下表随机访问数据的特性扩展而来。
 >
-> 时间复杂度正常情况O(1)，可能退化为O(n)。
->
-> 散列表大小发生变化时，所以需要重新调用散列函数计算位置。
+
+* 时间复杂度正常情况O(1)，可能退化为O(n)。
+* 散列表大小发生变化时，需要重新调用散列函数计算位置，以及扩容缩容带来性能损耗。
+* 不能顺序遍历。
 
 | 概念                     | 说明                                                         |
 | ------------------------ | ------------------------------------------------------------ |
@@ -244,7 +174,7 @@
 * Redis有序集合：跳表 + 散列表
 * LinkedHashMap：散列表 + 双向链表，原理同LRU缓存淘汰策略。
 
-### 2、树（Tree）
+### 1.2 树（Tree）
 
 > 存储方式
 >
@@ -257,6 +187,10 @@ A为**根节点**，它没有父节点。
 A是B、E的**父节点**，BE互为**兄弟节点**。
 
 CDE叫做**叶子节点（叶节点）**，它们没有字节点。
+
+**后继节点：**比当前节点大的最小节点。
+
+**前驱节点：**比当前节点小的最大节点。
 
 * **节点的高度：**节点到叶子节点的**最长路径（边数**），例如 heightA = 2；heightB = 1。从上往下递减。
 * **节点的深度：**根节点到节点的所经过的边数。depthA = 0；depthB = 1。从上往下递增。
@@ -284,13 +218,13 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 
 ##### 树的遍历
 
-* 前序遍历：对于树中任意节点，先打印这个**节点自身**，再打印左子树，最后打印**右子树**。
-* 中序遍历：对于树中任意节点，先打印**左子树**，再打印**节点自身**，最后打印**右子树**。
-* 后序遍历：对于树中任意节点，先打印**左子树**，再打印**右子树**，最后这个**节点自身**。
+* **前序遍历**：对于树中任意节点，先打印这个**节点自身**，再打印左子树，最后打印**右子树**。
+* **中序遍历**：对于树中任意节点，先打印**左子树**，再打印**节点自身**，最后打印**右子树**。
+* **后序遍历**：对于树中任意节点，先打印**左子树**，再打印**右子树**，最后这个**节点自身**。
 
 #### 二叉查找树（Binary Search Tree）
 
-> 二叉搜索树
+> 也叫作`二叉排序树`：由于左小右大，使用中序遍历，可以输出有序的数据序列。
 
 特点
 
@@ -298,7 +232,7 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 - **右子树**上的所有节点的值均**>=父节点**的值。
 - 左右子树也为满足上述条件的二叉搜索树。
 
-> 查找流程
+##### 查找
 
 * 首先和根节点比较，如果相等直接返回。
 
@@ -306,12 +240,20 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 
 * 若**数据比节点大**，则从**右子树中递归**搜索。
 
-> 插入流程
+##### 插入
 
 * 执行查找流程
 
 * 若**数据比节点大**且节点的**右子树为空**，则直接将新数据**插入右子节点**位置。若不为空，**则递归遍历右子树**，查找合适位置。
 * 若**数据比节点小**且节点的**左子树为空**，则直接将新数据**插入左子节点**位置。若不为空，**则递归遍历左子树**，查找合适位置。
+
+##### 删除
+
+1. 需要删除的节点**没有子节点**：只需要将父节点中原本**指向删除子节点的指针置为null**。
+2. **只有一个子节点**：将父节点中原本**指向删除子节点的子节点**。
+3. **存在两个子节点：**找到删除子节点右子树中的最小节点，将它的数据替换到删除节点中，再删除这个最小节点。由于是最小节点，至多只有右节点，从原本位置中删除时参考前2条。**实质为 为前/后驱结点的数据交换 + 删除**。此处为后继结点删除。
+
+
 
 > 时间复杂度
 
@@ -340,17 +282,24 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 
 #### 平衡树
 
-> 时间复杂度
+> 保证左右子树高度差相对较小，解决在频繁的插入和删除中时间复杂度退化的问题。
+>
+> 最先被发明的平衡二叉查找树是`AVL 树`。
 
-| 操作 | 最优 | 一般    | 最坏 |
-| ---- | ---- | ------- | ---- |
-| 查找 |      | O(logN) |      |
-| 插入 |      | O(logN) |      |
-| 删除 |      | O(logN) |      |
+* 二叉树中任意一个节点的左右子树的高度相差不能大于1。
+* 为了维持平衡插入、删除的代价提高。
+
+| 时间复杂度 | 最优 | 一般    | 最坏 |
+| ---------- | ---- | ------- | ---- |
+| 查找       |      | O(logN) |      |
+| 插入       |      | O(logN) |      |
+| 删除       |      | O(logN) |      |
 
 
 
 #### 234树/4阶B树
+
+> 红黑树的前身
 
 - 是一种多叉树
 - 每个节点最多有``3个数据项``和``4个字节点``。
@@ -361,38 +310,86 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 
 
 
-#### 红黑树
+#### 红黑树（Red-Black Tree）
 
-> 一种高效的自平衡二叉搜索树
+> 一种高效的自平衡二叉查找树。但是并不严格符合平衡二叉树的定义，而是近似平衡。
+>
+> 每个结点上增加一个存储位表示结点的颜色。
+>
+> 代码实现中可用一个哨兵代表NIL。
 
-- 节点是红色或黑色。
-- 根节点是黑色。
-- 叶子节点都为黑色，且都为空。
-- 红色节点的父节点和字节点都为黑色(不会存在2个连续的红色节点)。
-- 从任一节点到叶子节点到所有路径都包含相同的数量的黑色节点。
+1. 节点是红色或黑色的。
+2. 根节点是黑色。
+3. 每个叶子节点NIL都是空的， 不存储数据（注意）。
+4. 红色节点的父节点和子节点都为黑色(任何相邻的节点都不能同时为红色)。
+5. 从任一节点到可达的叶子节点的所有路径都包含相同的数量的黑色节点（黑高相同）。
 
 > 红黑树和234树是等价
 
-- 红黑树的黑色节点个树 = 234树的节点数
-- 234树的每一个节点中：黑色节点必为父节点，红色节点为字节点（黑色终结，红色两边）。
+- 红黑树的黑色节点个个数 = 234树的节点数
+- 234树的每一个节点中：黑色节点必为父节点，红色节点为子节点（黑色在中间，红色在两边）。
+
+![image-20220929225928693](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/image-20220929225928693.png)
 
 
-
-##### 插入操作的12种情况
-
-> 如果插入的是根节点，则为黑色。
+##### 树的变换
+> 当红黑树平衡被打破时，通过**旋转**和**变色**恢复。
 >
-> 其余情况插入的节点``最开始都一定是红色``（出现连续两个红色节点的冲突情况时需要进行旋转和变化）。
+> 旋转操作对于二叉查找树来说**一般情况就是为了找到合适的中间值，并重新构建成二叉查找树**。
+
+**变色**：红色节点变为黑色节点，黑色节点变为红色节点。
+
+**左旋（rotate left**）：围绕某个点进行左旋。 
+
+![image-20220929210112940](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/image-20220929210112940.png)
+
+**右旋（rotate right）**：围绕某个点进行右旋。
+
+![image-20220929210153548](./%E6%95%B0%E6%8D%AE%E7%BB%93%E6%9E%84%E4%B8%8E%E7%AE%97%E6%B3%95.assets/image-20220929210153548.png)
+
+##### 插入操作
+
+* 红黑树规定，插入的节点必须是红色。插入红色不会影响黑高，仅需要处理两个红色结点相邻的场景。
+* 如果插入的是根节点，直接变色为黑色。
+* 其余情况插入的节点``最开始都一定是红色``（出现连续两个红色节点的冲突情况时需要进行旋转和变化）。
+
+> 插入操作的12种情况，可以归纳为3类
 
 - 插入节点的父节点为黑色（4种）：直接插入，不做调整。
-- 叔父节点不是红色（4种）：变色 + 旋转。
-- 叔父节点时红色（4种上溢）：变色。
+- 插入节点的叔父节点不是红色（4种）：变色 + 旋转（单旋、双旋）。
+  * LL：变色 + 右旋。
+  * RR：变色 + 左旋。
+  * RL：变色 + 父右旋 + 祖父左旋
+  * LR：变色 + 父左旋 + 祖父右旋
+- 插入节点的叔父节点是红色（4种，对应234树的上溢）：只需要变色。
 
+  1. 父、叔结点：改为黑色（黑高同时 + 1，保证局部平衡）。
+2. 祖父结点：改为红色（黑高 - 1，从而保证整体平衡）。
 
+##### 删除操作
 
-## 算法基础
+* 红色节点直接删除。
+* 黑色节点删除。
+  * 删除节点有2个红色子节点。（根据前/后驱节点删除，将转化为子节点的删除）
+  * 删除节点有1个红色子节点。（需要将子节点染为黑色）
+  * 删除节点的子节点为黑色节点。（234的下溢处理）
+    * 删除节点为根节点，直接删除。
+    * 删除节点的兄弟节点为黑色（**A**）。
+      * 兄弟节点有红色子节点。（旋转 + 变换，原理同插入中的LL/RR/LR/RL）
+      * 兄弟节点没有红色子节点。（兄弟节点染红，父节点染黑，若父本来就为黑色，则使用父节点作为删除节点递归**A流程**）
+    * 删除节点的兄弟节点为红色。（染为黑色后转为上述处理）
 
-### 1、 复杂度分析
+#### 递归树
+
+> 分析递归算法的时间复杂度
+
+* 将问题拆解为层层子问题
+* 计算每一层的总时间
+* 统计树高，累加
+
+## 2 算法基础
+
+### 2.1 复杂度分析
 
 #### 时间复杂度
 
@@ -407,7 +404,7 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 
 
 
-### 2、 排序算法
+### 2.2 排序算法
 
 | 排序算法 | 时间复杂度                  | 空间复杂度 | 稳定排序？ | 原地排序？ |
 | -------- | --------------------------- | ---------- | ---------- | ---------- |
@@ -448,7 +445,7 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 
   手动模拟递归，越过系统栈大小的限制；
 
-### 3、查找
+### 2.3 查找
 
 |          | 时间复杂度 |      |
 | -------- | ---------- | ---- |
@@ -472,7 +469,7 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 * 查找第一个大于等于给定值的元素
 * 查找最后一个小于等于给定值的元素
 
-### 4、哈希（Hash）算法
+### 2.4 哈希（Hash）算法
 
 > 将任意长度的二进制值串映射为固定长度的二进制值串。
 
@@ -498,3 +495,88 @@ CDE叫做**叶子节点（叶节点）**，它们没有字节点。
 > 背景：在分布式缓存中，我们通过取模的方式将哈希值分布到不同服务器上，若此时需要进行扩容/缩容时，所有数据都需要重新计算哈希值。那么所有数据请求都会穿透缓存，直接请求数据库，可能出现雪崩效应，压垮数据库。
 
 一致性哈希算法通过将**数据的哈希划分为n个区间（尽可能大）**，并将这些区间分配给m台设备管理，**每台负责`n/m`个区间**。当有新的设备加入时，只需要**将部分区间数据搬迁到新的设备**即可，不需要全部重新哈希计算。
+
+## 附录
+
+### 伪代码
+
+- 缩进表示块结构。
+
+- `while`、`for`与`repeat-until`等循环结构以及`if-else`等条件语句机构与C、C++、Java、Python和Pascal中的那些机构具有类似的解释。
+
+  ```
+  to：迭代递增
+  downto：迭代递减
+  by：指定增量， by 2
+  ```
+
+- 符号`//`表示该行后面部分为注释。
+
+- 形如`i=j=e`的多重赋值将表达式e的值赋给变量`i`和`j`。
+
+  ```
+  j = e;
+  i = j;
+  ```
+
+- 变量是局部给定过程的。若无显示说明，不使用全局变量。
+
+- 数组元素通过`数组名[下标]`的形式来访问。
+
+  ```
+  A[i] 表示 数组A的第i个元素。
+  .. 表示数组值的一个范围,
+  A[1..j] 表示A的一个子数组。
+  ```
+
+- 复合数据通常被组织称``对象``,对象又由``属性``组成。
+
+  ```
+  . 后跟一个 属性名。例如：A.length
+  我们把表示一个数组或对象的变量看作指向表示数组或对象的数据的一个指针。
+  ```
+
+- ``按值``把参数传递给过程：被调用过程接收其参数自身的副本。
+
+  ```
+  如果对某个参数赋值，调用过程看不到这种改变。即参数重新赋值对原始参数并没有影响。
+  当对象被传递时，指向表示对象数据的指针被复制，而对象的属性并未被复制。即改变对象的属性时，原始对象内的属性也将会被改变。
+  数组同对象。
+  ```
+
+- 一个`return`语句立即将控制返回到调用过程的调用点。
+
+- 布尔运算符``and``和``or``都是**短路的**。
+  x and y，若 x 为 false，则不再求值y。
+  x or y，若 x 为 true， 则不再求值y。
+
+- 关键词``error``表示因为已被调用的过程情况不对而出现了一个错误。
+
+
+### 分析算法
+
+#### RAM模型
+
+假定为单处理器，指令一条接一条地执行，没有并发操作。
+
+- 算术指令
+
+  ```
+  加法、减法、乘法、除法、其余、向下取整、向上取整
+  ```
+
+- 数据移动指令
+
+  ```
+  装入、存储、复制
+  ```
+
+- 控制指令
+
+  ```
+  条件与无条件转移、子程序调用与返回
+  ```
+
+---
+
+## 
