--- a/docs/network/网络指令.md
+++ b/docs/network/网络指令.md
@@ -1,14 +1,14 @@
 # 网络指令
 
-|                                         |                            |      |
-| --------------------------------------- | -------------------------- | ---- |
-| strace                                  | 跟踪Socket相关的系统调用   |      |
-| netstat                                 | 多种网络栈和接口的统计信息 |      |
-| ifconfing                               | 接口配置                   |      |
-| ip                                      | 网络接口统计信息           |      |
-| ping                                    | 测试网络连通性             |      |
-| traceroute                              | 网络数据包嗅探器           |      |
-| 抓包工具<br />Wireshark/Fiddler/Charles | 图形化的网络数据报检查     |      |
+| Linux                                   | Windows  |                              |
+| --------------------------------------- | -------- | ---------------------------- |
+| strace                                  |          | 跟踪Socket相关的系统调用     |
+| netstat                                 |          | 多种网络栈和接口的统计信息   |
+| ifconfing/ip addr                       | ipconfig | 获取网络接口配置（ip信息）。 |
+| ip                                      |          | 网络接口统计信息             |
+| ping                                    |          | 测试网络连通性               |
+| traceroute                              |          | 网络数据包嗅探器             |
+| 抓包工具<br />Wireshark/Fiddler/Charles |          | 图形化的网络数据报检查       |
 
 ![](./%E7%BD%91%E7%BB%9C%E6%8C%87%E4%BB%A4.assets/2020-06-01-11-22-38.png)
 
